src/validation/tests/snapshots/rusty__validation__tests__naming_validation_test__DATE_AND_TIME.snap
---
source: src/validation/tests/naming_validation_test.rs
expression: "& result"
---
error[E004]: DATE_AND_TIME can not be used as a name because it is a built-in datatype
  ┌─ <internal>:1:6
  │
1 │ TYPE DATE_AND_TIME : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^^^^^^^^^ DATE_AND_TIME can not be used as a name because it is a built-in datatype

error[E004]: DATE_AND_TIME: Ambiguous datatype.
  ┌─ <internal>:1:6
  │
1 │ TYPE DATE_AND_TIME : STRUCT x : DINT; END_STRUCT END_TYPE
  │      ^^^^^^^^^^^^^ DATE_AND_TIME: Ambiguous datatype.
